--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
 <title>Coding Hub</title>
 
 <link rel="stylesheet" href="style.css">
-
-<script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-<script src="firebase.js"></script>
-<script src="script.js" defer></script>
+<link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -40,6 +35,17 @@
 <button id="clearAll">🗑 Limpiar todo</button>
 
 <div id="cardsContainer"></div>
+
+
+<!-- 🔥 SCRIPTS AL FINAL (ORDEN OBLIGATORIO) -->
+<script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+
+<script src="firebase.js"></script>
+<script src="auth.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
